2022-12-07T08:21:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637087047 # 296
* notice: last 14d: unq all: 3 8
* notice: prev accum: outdated-unq outdated-all / unq all: 97 258 / 102 264
* notice: next accum: outdated-unq outdated-all / unq all: 97 258 / 103 266
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-12-07]

2022-12-07T01:25:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3634980569 # 295
* notice: last 14d: unq all: 2 6
* notice: prev accum: outdated-unq outdated-all / unq all: 96 256 / 102 264
* notice: next accum: outdated-unq outdated-all / unq all: 97 258 / 102 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [2022-11-22] / [2022-11-23]

2022-12-06T08:21:44Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3627748056 # 293
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 96 256 / 102 265
* notice: next accum: outdated-unq outdated-all / unq all: 96 256 / 102 264
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
* notice: removed / changed dates: [] / [2022-11-22]

2022-12-05T16:24:05Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3621957115 # 291
* notice: last 14d: unq all: 2 9
* notice: prev accum: outdated-unq outdated-all / unq all: 95 255 / 102 265
* notice: next accum: outdated-unq outdated-all / unq all: 96 256 / 102 265
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-11-21] / []

2022-12-05T01:22:03Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3616029265 # 289