@@ -1,3 +1,11 @@
+2022-12-07T16:23:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640783970 # 297
+* notice: last 14d: unq all: 3 8
+* notice: prev accum: outdated-unq outdated-all / unq all: 97 258 / 103 266
+* notice: next accum: outdated-unq outdated-all / unq all: 98 260 / 104 268
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [2022-11-23] / [2022-12-07]
+
 2022-12-07T08:21:36Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3637087047 # 296
 * notice: last 14d: unq all: 3 8
